--- a/pages/eventsPast.html
+++ b/pages/eventsPast.html
@@ -69,164 +69,13 @@
                     </div>
                 </div>
             </section>
-            <section class="productCards">
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Cinema.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
+        <div class="mx-auto d-flex">
+            <div class="cardstyle">
+                <div class="row row-cols-1 row-cols-md-2 gap-4 m-4 cardstyle2"
+                    id="cardcontainer">
                 </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Costume_Party.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Food_Fair.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Marathon.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Museum_Tour.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Music_Concert.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Cinema.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Costume_Party.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Food_Fair.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Marathon.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Museum_Tour.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imageContainer">
-                        <img src="/assets/image/Music_Concert.jpg" class="card-img-top" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <div class="cardBottom">
-                        <p>price:###</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            </div>
+        </div>
         </main>
         <footer class="mt-auto">
             <div class="container-fluid iscontainer">
@@ -243,5 +92,6 @@
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src="/assets/js/eventsPast.js"></script>
     </body>
 </html>
