--- a/pages/stats.html
+++ b/pages/stats.html
@@ -48,14 +48,14 @@
                         <th colspan="3" class="tableHeader">Events statistics</th>
                     </tr>
                     <tr>
-                        <th>Events with the highest of attendance</th>
-                        <th>Events with the lowest percentage of attendance</th>
-                        <th>Events with larger capacity</th>
+                        <th colspan="3" id="tbody1">Events with the highest of attendance</th>
+                    </tr>
+                        <th colspan="3" id="tbody2">Events with the lowest percentage of attendance</th>
+                        
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th colspan="3" id="tbody3">Events with larger capacity</th>
+ 
                     </tr>
                     <tr>
                         <th colspan="3" class="tableHeader">Upcoming events statistics by category</th>
@@ -115,6 +115,11 @@
                     </tr>
             </table>
         </section>
+        <section class="tbody1" >
+            <div ></div>
+            <div ></div>
+            <div ></div>
+        </section>
     </main>
     <footer class="mt-auto">
         <div class="container-fluid iscontainer">
@@ -130,5 +135,6 @@
             </div>
         </div>
     </footer>
+    <script type="module" src="/assets/js/stats.js"></script>
 </body>
 </html>
